--- a/Ramto/Pages/Home.razor
+++ b/Ramto/Pages/Home.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/Home"
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,7 +7,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/home.css">
     
     <title>Responsive Dashboard | Ramto</title>
@@ -31,25 +30,25 @@
             </div>
 
             <div class="sidebar">
-                <a href="inicio.html">
+                <a href="/Home">
                     <span class="material-icons-sharp">
                         home
                     </span>
                     <h3>inicio</h3>
                 </a>
-                <a href="articulos.html">
+                <a href="/articulos">
                     <span class="material-icons-sharp">
                         inventory
                     </span>
                     <h3>Artículos</h3>
                 </a>
-                <a href="proveedores.html">
+                <a href="/proveedores">
                     <span class="material-icons-sharp">
                         person_outline
                     </span>
                     <h3>Proveedores</h3>
                 </a>
-                <a href="unidades.html">
+                <a href="/UnidadesDeMedida">
                     <span class="material-icons-sharp">
                         straighten
                     </span>
@@ -188,7 +187,7 @@
             <div class="user-profile">
                 <div class="logo">
                     <img src="img/logo.svg">
-                    <h2>TypingSotf</h2>
+                    <h2>TypingSoft</h2>
                     <p>Fullstack</p>
                 </div>
             </div>
